--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,40 @@
 body {
-    margin: auto;
+    margin: 0;
     width: 100vw;
     height: 100vh;
+}
+
+#root {
+    width: 100%;
+    height: 100%;
 }
 
 #main {
     width: 100%;
     height: 100%;
-
-}
-
-#components {
     display: flex;
     flex-direction: column;
 }
 
 h2 {
     text-align: center;
+}
+
+#title {
+    width: 100%;
+    height: 5%
+}
+
+#components {
+    display: flex;
+    flex-direction: row;
+    height: 95%;
+    width: 100%
+}
+
+#mapDiv {
+    height: 92%;
+    width: 52%;
+    border: 1px solid black;
+    margin: 2%;
 }
