--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,7 @@ h2 {
     margin-left: 1%;
     margin-right: 1%;
     border: 1px solid black;
+    background-color: white;
 }
 
 #forecastTitle {
@@ -91,4 +92,28 @@ h3 {
     margin-bottom: 1%;
     border: 1px solid black;
     background-color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
+
+
+#links p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+    height: 100%;
+    width: 68%;
+}
+
+#icons {
+    border: 1px solid black;
+    height: 100%;
+    width: 12%;
+}
+
+
+
+
