--- a/styles.css
+++ b/styles.css
@@ -18,16 +18,33 @@ body {
     background-color: #4a4848;
 }
 
-h2 {
-    text-align: center;
-}
-
-#title {
+#header {
     width: 100%;
     height: 5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    
+}
+
+#headButton {
+    width: 52%;
+    display: flex;
+    justify-content: center;
+}
+
+#h2 {
+    width: 43%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     color: white;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
+
+
 
 #components {
     display: flex;
@@ -114,6 +131,13 @@ h3 {
     width: 12%;
 }
 
+#h2 h2 {
+    margin-bottom: 0%;
+}
+
+#headButton {
+    margin-top: 1.5%;
+}
 
 
 
