--- a/styles.css
+++ b/styles.css
@@ -139,5 +139,15 @@ h3 {
     margin-top: 1.5%;
 }
 
+#defaultInfo {
+    height: 60%;
+    width: 96%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    margin-left: 2%;
+    margin-right: 2%;
+    border: 1px solid black;
+    background-color: white;
+}
 
 
