--- a/styles.css
+++ b/styles.css
@@ -103,17 +103,18 @@ h3 {
 }
 
 #top {
-    height: 90%;
-    width: 56%;
-    border: 1px solid black;
-    margin: 1%;
+    height: 96%;
+    width: 58%;
+    border-right: 1px solid black;
+    margin-top: 1%;
+    margin-bottom: 1%
 }
 
 #bottom {
-    height: 90%;
-    width: 40%;
-    border: 1px solid black;
-    margin: 1%;
+    height: 96%;
+    width: 42%;
+    margin-top: 1%;
+    margin-bottom: 1%
 }
 
 #links {
