Data in Index items transitioning correctly  onClick

--- a/styles.css
+++ b/styles.css
@@ -109,9 +109,9 @@ h3 {
 }
 
 #future {
-    height: 2%;
+    height: 3%;
     width: 100%;
-    margin-bottom: 1%;
+    margin: 2%;
     text-align: center;
 }
 
