--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,13 @@ body {
     border: 1px solid black;
     margin: 2%;
     background-color: white;
+    position: relative;
+}
+
+#svgToRemove {
+    position: absolute;
+    top: 5%;
+    left: 0%;
 }
 
 #forecastDiv {
