--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,7 @@ h3 {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    align-items: center;
 }
 
 
@@ -137,10 +138,16 @@ h3 {
 }
 
 #description {
-    width: 51%;
-    height: 76%;
-    border: 1px solid black;
-    margin: 2%;
+    width: 44%;
+    height: 64%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#description p {
+    margin: 0;
 }
 
 
@@ -227,6 +234,29 @@ h3 {
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+
+#tempMain {
+    height: 50%;
+    width: 100%;
+    margin: 0;
+    font-size: 200%;
+    text-align: center;
+}
+
+#iconTemp {
+    height: 100%;
+    width: 32%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#iconTemp svg {
+    height: 100%;
+    width: 100%;
+
 }
 
 
