--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,22 @@
 body {
     margin: 0;
     width: 100vw;
-    height: 100vh;
+    /* height: 100vh; */
+    font-family: 'Open Sans', sans-serif;
 }
 
 #root {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
 }
 
 #main {
-    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     position: absolute;
     background-color: #4a4848;
+    overflow-y: scroll;
 }
 
 #header {
@@ -25,13 +26,12 @@ body {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    
 }
 
 #headButton {
     width: 52%;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 #h2 {
@@ -41,23 +41,22 @@ body {
     align-items: center;
     text-align: center;
     color: white;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
 }
 
 #components {
     display: flex;
     flex-direction: row;
-    height: 95%;
-    width: 100%;
 }
 
 #mapDiv {
-    height: 92%;
+    border-radius: 5px;
+    min-height: 92vh;
     width: 52%;
     border: 1px solid black;
     margin: 2%;
-    background-color: white;
     position: relative;
+    box-shadow: 0px 0px 14px 0px rgb(59, 59, 59);
 }
 
 #svgToRemove {
@@ -65,18 +64,15 @@ body {
     top: 8.5%;
     left: 2%;
     pointer-events: none;
-    border: 1px solid white;
+    border: 1px solid white;  
 }
 
 #forecastDiv {
-    height: 92%;
-    width: 40%;
-    margin-top: 2%;
-    margin-bottom: 2%;
-    margin-left: 1%;
-    margin-right: 1%;
-    border: 1px solid black;
-    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-radius: 5px;
+    box-shadow: 0px 0px 14px 0px rgb(59, 59, 59);
 }
 
 #forecastTitle {
