--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,10 @@ body {
     justify-content: space-between;
     border-radius: 5px;
     box-shadow: 0px 0px 14px 0px rgb(59, 59, 59);
+    width: 40%;
+    margin: 2% 1% 2% 1%;
+    border: 1px solid black;
+    background-color: white;
 }
 
 #forecastTitle {
@@ -151,7 +155,7 @@ h3 {
     height: 96%;
     width: 42%;
     margin-top: 1%;
-    margin-bottom: 1%
+    margin-bottom: 1%;
 }
 
 #links {
@@ -170,11 +174,13 @@ h3 {
 
 
 #links p {
+    margin: 1em;
+    text-align: center;
+    background-color: white;
     display: flex;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
-    height: 100%;
-    width: 68%;
 }
 
 #icons {
@@ -216,6 +222,14 @@ h3 {
     height: 50%;
     text-align: center;
     margin: auto;
+    margin-top: 1em;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    vertical-align: center;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 #instructions {
@@ -234,7 +248,6 @@ h3 {
 }
 
 #projectInfo {
-    height: 22%;
     width: 96%;
     margin: 2%;
     background-color: white;
@@ -267,7 +280,40 @@ h3 {
 #iconTemp svg {
     height: 100%;
     width: 100%;
-
 }
 
+
+
+
+
+
+/**
+selectors to change frontend classes
+**/
+.msg {
+    border-radius: 3px;
+    border: 1px solid rgb(85, 85, 85);
+    background-color: #e5e5e5;
+    text-align: center;
+    padding: 1em;
+    margin: 0.5em;
+    align-self: center;
+    align-items: center;
+    box-shadow: 0px 0px 14px 0px rgb(122, 122, 122, 1);
+}
+
+.msg2 {
+    font-size: 1.5em;
+    color: whitesmoke;
+    font-weight: 400;
+    border-radius: 3px;
+    border: 1px solid rgb(85, 85, 85);
+    background-color: #5d5d5d;
+    text-align: center;
+    padding: 1em;
+    margin: 0.5em;
+    align-self: center;
+    align-items: center;
+    box-shadow: 0px 0px 5px 0px rgba(122, 122, 122, 1)
+}
 
