--- a/styles.css
+++ b/styles.css
@@ -317,3 +317,48 @@ selectors to change frontend classes
     box-shadow: 0px 0px 5px 0px rgba(122, 122, 122, 1)
 }
 
+.btn {
+    cursor: pointer;
+    display: inline-block;
+    min-height: 1em;
+    outline: 0;
+    border: 1px solid black;
+    vertical-align: baseline;
+    background: #e0e1e2 none;
+    color: rgba(0 0 0 0.6);
+    font-family: Lato, Helvetica Neue, Arial, Helvetica, sans-serif;
+    margin: 0 0.25em 0 0;
+    padding: 0.78571429em 1.5em;
+    text-transform: none;
+    text-shadow: none;
+    font-weight: 700;
+    line-height: 1em;
+    font-style: normal;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 028571429rem;
+}
+
+.btn:hover {
+    background-color: rgb(79, 86, 126);
+    transition: 0.1s ease-in-out all;
+    color: aliceblue;
+}
+
+@media only screen and (max-width : 100px){
+    #components {
+        flex-direction: column;
+    }
+
+    #forecastDiv {
+        width: 100%;
+        margin: 0;
+    }
+
+    #mapDiv {
+        margin: 0;
+        min-height: 60%;
+        width: 100%;
+        border-radius: 0;
+    }
+}
