--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,12 @@
 body {
     margin: 0;
     width: 100vw;
-    /* height: 100vh; */
+    height: 100vh;
     font-family: 'Open Sans', sans-serif;
 }
 
 #root {
     width: 100%;
-    /* height: 100%; */
 }
 
 #main {
@@ -51,7 +50,8 @@ body {
 
 #mapDiv {
     border-radius: 5px;
-    min-height: 92vh;
+    min-height: 88vh;
+    max-height: 88vh;
     width: 52%;
     border: 1px solid black;
     margin: 2%;
@@ -303,15 +303,15 @@ selectors to change frontend classes
 }
 
 .msg2 {
-    font-size: 1.5em;
+    font-size: 1em;
     color: whitesmoke;
-    font-weight: 400;
+    font-weight: 200;
     border-radius: 3px;
     border: 1px solid rgb(85, 85, 85);
     background-color: #5d5d5d;
     text-align: center;
     padding: 1em;
-    margin: 0.5em;
+    margin: 0.2em;
     align-self: center;
     align-items: center;
     box-shadow: 0px 0px 5px 0px rgba(122, 122, 122, 1)
