--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@ body {
     margin: 0;
     width: 100vw;
     height: 100vh;
-    font-family: 'Open Sans', sans-serif;
 }
 
 #root {
@@ -11,11 +10,11 @@ body {
 
 #main {
     height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     position: absolute;
     background-color: #4a4848;
-    overflow-y: scroll;
 }
 
 #header {
@@ -345,7 +344,7 @@ selectors to change frontend classes
     color: aliceblue;
 }
 
-@media only screen and (max-width : 100px){
+/* @media only screen and (max-width : 100px){
     #components {
         flex-direction: column;
     }
@@ -361,4 +360,4 @@ selectors to change frontend classes
         width: 100%;
         border-radius: 0;
     }
-}
+} */
